# mpl-multitab

./: .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  README.stub  build_readme.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
src/mpl_multitab/: __init__.py  _logging.py  core.py  multitab.py
src/mpl_multitab/examples/: _1d.py  _2d.py  _3d.py  __init__.py  _nd.py
tests/: conftest.py  test_multitab.py  test_multitab_2d.py  test_multitab_nested.py  test_tabs.py
