[metadata]
name = {name}
author = {author}
author_email = {email}
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
url = {url}
project_urls =
    Bug Tracker = {url}/issues
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
packages = find:
python_requires = >={py_min_version}
setup_requires =
  setuptools_scm


[options.packages.find]
where = src